--- a/eth-contracts/package.json
+++ b/eth-contracts/package.json
@@ -8,5 +8,10 @@
     "format": "forge fmt"
   },
   "author": "Abdulla Faraz <abdulla.faraz@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@uniswap/sdk-core": "7.5.0",
+    "@uniswap/v3-core": "1.0.1",
+    "@uniswap/v3-periphery": "1.4.4"
+  }
 }
