--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
 
-#      - name: Show Forge version
-#        run: |
-#          forge --version
+      - name: Show Forge version
+        run: |
+          forge --version
 
       - name: Run Forge fmt
         run: |
